salvia_macro/tests/query_ui/fail/wrong_context_type.stderr
error[E0308]: mismatched types
 --> $DIR/wrong_context_type.rs:4:17
  |
4 | async fn f(_cx: QueryContext) {}
  |                 ^^^^^^^^^^^^
  |                 |
  |                 expected `&QueryContext`, found struct `QueryContext`
  |                 expected due to this
  |
  = note: expected struct `PhantomData<&QueryContext>`
             found struct `PhantomData<QueryContext>`

error[E0308]: mismatched types
 --> $DIR/wrong_context_type.rs:3:1
  |
3 | #[query]
  | ^^^^^^^^ expected struct `QueryContext`, found `&QueryContext`
  |
  = note: this error originates in the attribute macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)
